# setur

./: GEMINI.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.agents/rules/: corrections.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer_hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/pages/: Boot.tsx  Builder.tsx  Manager.tsx  Settings.tsx
src/types/: presets.ts
